--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           # Docker tags based on the following events/attributes
           tags: |
+            type=raw,value=latest
             type=sha
       - name: Build and push
         uses: docker/build-push-action@v5
